# reflex-navbar-template

./: pyproject.toml  rxconfig.py
reflex_navbar_template/: reflex_navbar_template.py
reflex_navbar_template/components/: sidebar.py
reflex_navbar_template/pages/: dashboard.py  index.py  settings.py
reflex_navbar_template/templates/: template.py
