[project]
name = "reflex-navbar-template"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Luciano Scarpulla", email = "scarpulla53@gmail.com" }]
dependencies = ["reflex>=0.4.9"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
